--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     height: auto;
 }
 .textbox{
-    position: absolute;
+    /*position: absolute;
     top:400px;
     left:100px;
     background-color: cornsilk;
@@ -32,11 +32,24 @@
     max-width: 400px;
     width: 90%;
     transform: translate(-50%);
-    box-sizing: border-box;
+    box-sizing: border-box;*/
+    position: static;
+    width: 90%;
+    margin:20px auto;
+    padding: 10px;
+    text-align: center;
+}
+.textbox h1{
+    font-size: 1.2rem;
+}
+.textbox p{
+    font-size: 1rem;
 }
 #one{
-    text-align: center;
-    padding-top: 20px;
+   /* text-align: center;
+    padding-top: 20px;*/
+    width:90%;
+    margin: auto;
     
 }
 .one{
@@ -65,17 +78,8 @@
     background-color: azure;
 }
 @media screen and(max-width:768px){
-    body{
-        font-size: 16px;
-        padding: 10px;
-    }
-    .your-main-container{
-        flex-direction: column;
-        text-align: center1;
-    }
-    img{
-        max-width: 100%;
-        height: auto;
+    .imgcontainer{
+        width: 100%;
     }
 }
 
