--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
     padding: 10px;
     max-width: 400px;
     width: 90%;
-    transform: translate(-50%);git
-    box-sizing: border-box;
+    transform: translate(-50%)
+    
    /* position: static;
     width: 90%;
     margin:20px auto;
@@ -40,7 +40,7 @@
     text-align: center;*/
 }
 .textbox h1{
-    font-size: 1.2rem;
+    font-size:1.2rem;
 }
 .textbox p{
     font-size: 1rem;
