--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero{
+.hero-section{
     position: relative;
     width: 100%;
-    max-height: 400px;
+    max-height: 300px;
     overflow: hidden;
 }
 /*.img container{
@@ -22,7 +22,7 @@
     width: 100%;
     overflow: hidden;
 }*/
-.hero img{
+.hero-img{
     width: 100%;
     display: block;
     background-color: rgb(33, 36, 36);
@@ -36,8 +36,9 @@
     background-color: cornsilk;
     color: black;
     border-radius: 10px;
-    padding: 20px;
+    padding:10px 20px;
     text-align: center;
+    font-size: 1rem;
    
    /* transform: translate(-50%)
     
@@ -82,14 +83,14 @@
     margin: 0 10px;
 }
 @media(max-width:768px){
-    .textbox{
+    /*.textbox{
         position: static;
         background-color: cornsilk;
         margin: 20px auto;
         width: 90%;
         text-align: center;
     }
-    .textbox h2{
+    .textbox h1{
         font-size: 1.3rem;
     }
     .textbox p{
@@ -100,6 +101,16 @@
     }
     .main{
         font-size: 1rem;
+    }*/
+    .textbox{
+            font-size: 0.9rem;
+            padding: 8px 15px;
+    }
+    .textbox h1{
+        font-size: 1.1rem;
+    }
+    .textbox p{
+        font-size: 0.9rem;
     }
 }
 
